Update name and description

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "Next PWA",
-  "short_name": "Next PWA",
+  "name": "Haptrac",
+  "short_name": "Haptrac",
   "icons": [
     {
       "src": "/icons/android-chrome-192x192.png",
