--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "clsx": "^1.1.1",
     "formik": "^2.2.9",
     "next": "12.0.7",
     "next-pwa": "^5.4.4",
