Rename to Vibes

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "Haptrac",
-  "short_name": "Haptrac",
+  "name": "Vibes",
+  "short_name": "Vibes",
   "icons": [
     {
       "src": "/icons/android-chrome-192x192.png",
