--- a/package.json
+++ b/package.json
@@ -8,13 +8,17 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@prisma/client": "^3.12.0",
+    "@types/web-push": "^3.3.2",
     "clsx": "^1.1.1",
     "formik": "^2.2.9",
     "next": "12.0.7",
     "next-pwa": "^5.4.4",
+    "prisma": "^3.12.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-icons": "^4.3.1"
+    "react-icons": "^4.3.1",
+    "web-push": "^3.4.5"
   },
   "devDependencies": {
     "@types/node": "17.0.8",
