--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@prisma/client": "^3.12.0",
+    "@types/react-toggle": "^4.0.3",
     "@types/web-push": "^3.3.2",
     "clsx": "^1.1.1",
     "formik": "^2.2.9",
@@ -18,6 +19,7 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-icons": "^4.3.1",
+    "react-toggle": "^4.1.2",
     "web-push": "^3.4.5"
   },
   "devDependencies": {
