--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "lint:fix": "next lint --fix"
   },
   "dependencies": {
     "@prisma/client": "^3.12.0",
@@ -28,6 +29,7 @@
     "autoprefixer": "^10.4.1",
     "eslint": "8.6.0",
     "eslint-config-next": "12.0.7",
+    "eslint-plugin-unused-imports": "^2.0.0",
     "postcss": "^8.4.5",
     "tailwind-styled-components": "^2.1.7",
     "tailwindcss": "^3.0.11",
