Add postinstall hook for generating Prisma client

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "nextjs-typescript-tailwindcss-pwa",
   "private": true,
   "scripts": {
+    "postinstall": "prisma generate",
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
