--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@prisma/client": "^3.12.0",
+    "@types/react-medium-image-zoom": "^3.0.1",
     "@types/react-toggle": "^4.0.3",
     "@types/web-push": "^3.3.2",
     "clsx": "^1.1.1",
@@ -21,6 +22,7 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-icons": "^4.3.1",
+    "react-medium-image-zoom": "^4.3.7",
     "react-toggle": "^4.1.2",
     "web-push": "^3.4.5"
   },
